--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
         <div class="profile-card fade-in">
             <div class="profile-header">
                 <div class="profile-image">
-                    <img src="https://files.catbox.moe/oc5u7b.jpg" alt="乂𝛆𝛐𝛈 𝛋𝛊 ¹⁰" 
+                    <img src="https://files.catbox.moe/oc5u7b.jpg" alt="𝚮ʀɪᴛʜɪᴋ ᴜᴅᴀʏ - 乂𝛆𝛐𝛈 𝛋𝛊 ¹⁰" 
                          onload="this.style.opacity='1'" 
                          onerror="this.style.display='none'; this.parentElement.innerHTML='AS';" 
                          style="opacity: 0; transition: opacity 0.3s ease;" />
