--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
                 </a>
             </div>
                 <div class="profile-info">
-                    <h1>乂𝛆𝛐𝛈 𝛋𝛊 ¹⁰</h1>
+                    <h1>𝚮ʀɪᴛʜɪᴋ 𝐔ᴅᴀʏ - 乂𝛆𝛐𝛈 𝛋𝛊 ¹⁰</h1>
                     <div class="role">Web Developer</div>
                 </div>
             </div>
