--- a/index.html
+++ b/index.html
@@ -462,10 +462,10 @@
             <div class="about-section fade-in">
                 <h2 class="section-title">About Me</h2>
                 <p class="about-text">
-                    I'm a Node.js Bot and Website Developer based in Kerala, India, specializing in creating seamless, efficient, and scalable web solutions. I enjoy turning complex problems into simple, beautiful and intuitive designs.
+                    I am Hrithik Uday, a B.Com (Co-operation) student at KMCT Arts and Science College, Kuttippuram, with a strong academic foundation in commerce from Fathima Matha HSS and GBHSS Tirur.
                 </p>
                 <p class="about-text">
-                    As a Node.js developer, I specialize in creating dynamic websites and intelligent chatbots that provide seamless, efficient, and user-friendly experiences. My work focuses on delivering high-performance, scalable solutions that enhance functionality while ensuring intuitive interfaces. I am passionate about solving complex problems and streamlining user interactions through innovative solutions.
+                    Alongside my commerce background, I’m currently expanding my technical skills by studying Python Full Stack Development and exploring AI technologies.
                 </p>
             </div>
 
