--- a/index.html
+++ b/index.html
@@ -494,13 +494,13 @@
                 </div>
 
             <div class="social-links">
-                <a href="https://linkedin.com/in/jh" target="_blank" class="social-link" title="LinkedIn">
+                <a href="https://www.linkedin.com/in/hrithik-xeon-119923381" target="_blank" class="https://www.linkedin.com/in/hrithik-xeon-119923381" title="LinkedIn">
                     <img src="https://raw.githubusercontent.com/rahuldkjain/github-profile-readme-generator/master/src/images/icons/Social/linked-in-alt.svg" alt="LinkedIn" height="24" width="24" />
                 </a>
-                <a href="https://instagram.com/klk" target="_blank" class="social-link" title="Instagram">
+                <a href="https://instagram.com/xeonkl10" target="_blank" class="https://instagram.com/xeonkl10" title="Instagram">
                     <img src="https://raw.githubusercontent.com/rahuldkjain/github-profile-readme-generator/master/src/images/icons/Social/instagram.svg" alt="Instagram" height="24" width="24" />
                 </a>
-                <a href="https://github.com/yourusername" target="_blank" class="social-link" title="GitHub">
+                <a href="https://github.com/xeonkl10" target="_blank" class="https://github.com/xeonkl10k" title="GitHub">
                     <img src="https://raw.githubusercontent.com/rahuldkjain/github-profile-readme-generator/master/src/images/icons/Social/github.svg" alt="GitHub" height="24" width="24" />
                 </a>
             </div>
@@ -515,21 +515,21 @@
                     <div class="contact-icon">✉</div>
                     <div class="contact-info">
                         <div class="label">Email</div>
-                        <div class="value">orgxeon@gmail.com</div>
+                        <div class="value">hrithikuday777@gmail.com</div>
                     </div>
                 </div>
                 <div class="contact-item">
                     <div class="contact-icon">📱</div>
                     <div class="contact-info">
                         <div class="label">Phone</div>
-                        <div class="value">+91 00000 00000</div>
+                        <div class="value">+91 80755 57290</div>
                     </div>
                 </div>
                 <div class="contact-item">
                     <div class="contact-icon">🎂</div>
                     <div class="contact-info">
                         <div class="label">Birthday</div>
-                        <div class="value">Jan 23, 2001</div>
+                        <div class="value">Jan 23, 2004</div>
                     </div>
                 </div>
                 <div class="contact-item">
