--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ðš®Ê€Éªá´›ÊœÉªá´‹ ð”á´…á´€Ê - ä¹‚ð›†ð›ð›ˆ ð›‹ð›Š Â¹â°</title>
+    <title>𝚮ʀɪᴛʜɪᴋ 𝐔ᴅᴀʏ - 乂𝛆𝛐𝛈 𝛋𝛊 ¹⁰</title>
     <style>
         * {
             margin: 0;
