--- a/index.html
+++ b/index.html
@@ -755,7 +755,7 @@
                          style="opacity: 0; transition: opacity 0.3s ease;" />
                 </div>
                 <div class="profile-info">
-                    <h1>ðš®Ê€Éªá´›ÊœÉªá´‹ ð”á´…á´€Ê - ä¹‚ð›†ð›ð›ˆ ð›‹ð›Š Â¹â°</h1>
+                    <h1>𝚮ʀɪᴛʜɪᴋ 𝐔ᴅᴀʏ - 乂𝛆𝛐𝛈 𝛋𝛊 ¹⁰</h1>
                     <div class="role">Web Developer</div>
                 </div>
             </div>
