--- a/index.html
+++ b/index.html
@@ -856,7 +856,7 @@
             </div>
 
             <div class="languages-section fade-in">
-                <h2 class="section-title">Languages</h2>
+                 <h2 class="section-title">Programming Languages</h2>
                 <div class="languages-grid">
                     <div class="language-item">
                         <div class="language-icon html-icon">HTML</div>
@@ -867,6 +867,10 @@
                     <div class="language-item">
                         <div class="language-icon js-icon">JS</div>
                     </div>
+                    <div class="language-item">
+                        <div class="language-icon python-icon">PY</div>
+                    </div>
+
                 </div>
             </div>
         </div>
