--- a/index.html
+++ b/index.html
@@ -410,6 +410,7 @@
         .html-icon { background: #e34c26; }
         .css-icon { background: #1572b6; }
         .js-icon { background: #f7df1e; color: #000; }
+        .python-icon { background: #3776ab; }
 
         .language-icon:hover {
             transform: scale(1.1);
