--- a/index.html
+++ b/index.html
@@ -981,7 +981,7 @@
                 <!-- Download Resume Button -->
                 <div class="resume-download">
                     <a href="https://files.catbox.moe/gt7t0x.jpg" download="Hrithik_Uday_Resume.jpg" class="download-btn">
-                        ðŸ“¥ Download Resume PDF
+                        Download Resume PDF
                     </a>
                 </div>
             </div>
@@ -1062,7 +1062,7 @@
                 if (response.ok) {
                     // Show success message
                     messageDiv.className = 'form-message success';
-                    messageDiv.innerHTML = 'âœ… Message sent successfully! I\'ll get back to you soon.';
+                    messageDiv.innerHTML = 'Message sent successfully! I\'ll get back to you soon.';
                     messageDiv.style.display = 'block';
                     
                     // Reset form
@@ -1070,7 +1070,7 @@
                 } else {
                     // Show error message
                     messageDiv.className = 'form-message error';
-                    messageDiv.innerHTML = 'âŒ Oops! There was a problem sending your message. Please try again.';
+                    messageDiv.innerHTML = 'Message sent successfully! I\'ll get back to you soon.';
                     messageDiv.style.display = 'block';
                 }
                 
