--- a/index.html
+++ b/index.html
@@ -762,35 +762,44 @@
             </div>
 
             <div class="contact-grid">
-                <div class="contact-item">
-                    <div class="contact-icon">âœ‰</div>
-                    <div class="contact-info">
-                        <div class="label">Email</div>
-                        <div class="value">hrithikuday777@gmail.com</div>
-                    </div>
-                </div>
-                <div class="contact-item">
-                    <div class="contact-icon">ðŸ“±</div>
-                    <div class="contact-info">
-                        <div class="label">Phone</div>
-                        <div class="value">+91 80755 57290</div>
-                    </div>
-                </div>
-                <div class="contact-item">
-                    <div class="contact-icon">ðŸŽ‚</div>
-                    <div class="contact-info">
-                        <div class="label">Birthday</div>
-                        <div class="value">Jan 23, 2004</div>
-                    </div>
-                </div>
-                <div class="contact-item">
-                    <div class="contact-icon">ðŸ“</div>
-                    <div class="contact-info">
-                        <div class="label">Location</div>
-                        <div class="value">Malappuram, Kerala, India</div>
-                    </div>
-                </div>
-            </div>
+    <div class="contact-item">
+        <div class="contact-icon">
+            <img src="email-icon.png" alt="Email Icon" width="20" height="20">
+        </div>
+        <div class="contact-info">
+            <div class="label">Email</div>
+            <div class="value">hrithikuday777@gmail.com</div>
+        </div>
+    </div>
+    <div class="contact-item">
+        <div class="contact-icon">
+            <img src="phone-icon.png" alt="Phone Icon" width="20" height="20">
+        </div>
+        <div class="contact-info">
+            <div class="label">Phone</div>
+            <div class="value">+91 80755 57290</div>
+        </div>
+    </div>
+    <div class="contact-item">
+        <div class="contact-icon">
+            <img src="birthday-icon.png" alt="Birthday Icon" width="20" height="20">
+        </div>
+        <div class="contact-info">
+            <div class="label">Birthday</div>
+            <div class="value">Jan 23, 2004</div>
+        </div>
+    </div>
+    <div class="contact-item">
+        <div class="contact-icon">
+            <img src="location-icon.png" alt="Location Icon" width="20" height="20">
+        </div>
+        <div class="contact-info">
+            <div class="label">Location</div>
+            <div class="value">Malappuram, Kerala, India</div>
+        </div>
+    </div>
+</div>
+
 
             <div class="social-links">
                <a href="https://www.linkedin.com/in/hrithik-xeon-119923381" target="_blank" class="social-link" title="LinkedIn">
